--- a/app/src/main/res/layout/activity_statistic.xml
+++ b/app/src/main/res/layout/activity_statistic.xml
@@ -82,6 +82,7 @@
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:background="@drawable/rounded_button"
+            android:fontFamily="casual"
             android:textOff="@string/xsmall"
             android:textOn="@string/xsmall" />
 
@@ -94,6 +95,7 @@
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:background="@drawable/rounded_button"
+            android:fontFamily="casual"
             android:textOff="@string/small"
             android:textOn="@string/small" />
 
@@ -106,6 +108,7 @@
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:background="@drawable/rounded_button"
+            android:fontFamily="casual"
             android:textOff="@string/medium"
             android:textOn="@string/medium" />
 
@@ -118,6 +121,7 @@
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:background="@drawable/rounded_button"
+            android:fontFamily="casual"
             android:textOff="@string/large"
             android:textOn="@string/large" />
 
@@ -130,6 +134,7 @@
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:background="@drawable/rounded_button"
+            android:fontFamily="casual"
             android:textOff="@string/xlarge"
             android:textOn="@string/xlarge" />
 
@@ -142,6 +147,7 @@
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:background="@drawable/rounded_button"
+            android:fontFamily="casual"
             android:textOff="@string/xxlarge"
             android:textOn="@string/xxlarge" />
     </LinearLayout>
