--- a/app/src/main/res/layout/bot_level_list.xml
+++ b/app/src/main/res/layout/bot_level_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/botLevelList"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -20,6 +21,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="casual"
+            android:padding="10dp"
             android:text="@string/easy"
             android:thumbTint="@color/colorButton" />
 
@@ -28,6 +31,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="casual"
+            android:padding="10dp"
             android:text="@string/normal"
             android:thumbTint="@color/colorButton" />
 
@@ -43,6 +48,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="casual"
+            android:padding="10dp"
             android:text="@string/hard"
             android:thumbTint="@color/colorButton" />
 
@@ -51,6 +58,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="casual"
+            android:padding="10dp"
             android:text="@string/veryhard"
             android:thumbTint="@color/colorButton" />
 
