--- a/app/src/main/res/layout/singleplayer_end_of_game.xml
+++ b/app/src/main/res/layout/singleplayer_end_of_game.xml
@@ -9,6 +9,7 @@
         android:id="@+id/message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="casual"
         android:gravity="center_horizontal"
         android:text="@string/congratulations"
         android:textColor="@android:color/holo_green_light"
@@ -19,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:fontFamily="casual"
         android:gravity="center_horizontal"
         android:text="@string/step"
         android:textColor="@color/textColor"
@@ -29,6 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:fontFamily="casual"
         android:gravity="center_horizontal"
         android:text="@string/score"
         android:textColor="@color/textColor"
@@ -39,6 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:fontFamily="casual"
         android:gravity="center_horizontal"
         android:text="@string/time"
         android:textColor="@color/textColor"
