--- a/app/src/main/res/layout/activity_battlefield.xml
+++ b/app/src/main/res/layout/activity_battlefield.xml
@@ -87,7 +87,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_weight="1"
-            android:fontFamily="sans-serif"
+            android:fontFamily="casual"
             android:gravity="center"
             android:hint="@string/user_country"
             android:textColorHint="@android:color/white"
@@ -107,6 +107,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ellipsize="end"
+            android:fontFamily="casual"
             android:gravity="center"
             android:singleLine="true"
             android:textColor="@android:color/white"
@@ -118,6 +119,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ellipsize="end"
+            android:fontFamily="casual"
             android:gravity="center"
             android:paddingEnd="1dp"
             android:paddingStart="1dp"
@@ -156,6 +158,7 @@
                         android:layout_alignParentStart="false"
                         android:layout_centerVertical="false"
                         android:layout_weight="1"
+                        android:fontFamily="casual"
                         android:text="@string/score"
                         android:textColor="@android:color/white"
                         android:textSize="18sp" />
@@ -168,6 +171,7 @@
                         android:layout_alignBottom="@+id/score"
                         android:layout_toEndOf="@+id/score"
                         android:layout_weight="1"
+                        android:fontFamily="casual"
                         android:textColor="@android:color/white"
                         android:textSize="18sp" />
                 </TableRow>
@@ -184,6 +188,7 @@
                         android:layout_alignBottom="@+id/currentStepCount"
                         android:layout_toStartOf="@+id/currentStepCount"
                         android:layout_weight="1"
+                        android:fontFamily="casual"
                         android:gravity="left"
                         android:text="@string/step"
                         android:textColor="@android:color/white"
@@ -197,6 +202,7 @@
                         android:layout_alignBottom="@+id/currentScore"
                         android:layout_alignParentEnd="true"
                         android:layout_weight="1"
+                        android:fontFamily="casual"
                         android:textColor="@android:color/white"
                         android:textSize="18sp" />
 
@@ -213,6 +219,7 @@
                         android:layout_below="@+id/currentScore"
                         android:layout_toEndOf="@+id/currentScore"
                         android:layout_weight="1"
+                        android:fontFamily="casual"
                         android:text="@string/time"
                         android:textColor="@android:color/white"
                         android:textSize="18sp" />
@@ -225,6 +232,7 @@
                         android:layout_gravity="start"
                         android:layout_toStartOf="@+id/step"
                         android:layout_weight="1"
+                        android:fontFamily="casual"
                         android:gravity="start"
                         android:text="0:00"
                         android:textColor="@android:color/white"
@@ -248,6 +256,7 @@
                         android:layout_alignParentStart="false"
                         android:layout_centerVertical="false"
                         android:layout_weight="1"
+                        android:fontFamily="casual"
                         android:text="@string/score"
                         android:textColor="@android:color/white"
                         android:textSize="18sp" />
@@ -260,6 +269,7 @@
                         android:layout_alignBottom="@+id/scoreSecondPlayer"
                         android:layout_toEndOf="@+id/scoreSecondPlayer"
                         android:layout_weight="1"
+                        android:fontFamily="casual"
                         android:textColor="@android:color/white"
                         android:textSize="18sp" />
                 </TableRow>
@@ -276,6 +286,7 @@
                         android:layout_alignBottom="@+id/currentStepCountSecondPlayer"
                         android:layout_toStartOf="@+id/currentStepCountSecondPlayer"
                         android:layout_weight="1"
+                        android:fontFamily="casual"
                         android:gravity="left"
                         android:text="@string/step"
                         android:textColor="@android:color/white"
@@ -289,6 +300,7 @@
                         android:layout_alignBottom="@+id/currentScoreSecondPlayer"
                         android:layout_alignParentEnd="true"
                         android:layout_weight="1"
+                        android:fontFamily="casual"
                         android:textColor="@android:color/white"
                         android:textSize="18sp" />
 
