--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -32,6 +32,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
+                    android:fontFamily="casual"
                     android:gravity="center"
                     android:text="999"
                     android:textColor="@android:color/black"
@@ -63,6 +64,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:ellipsize="end"
+                        android:fontFamily="casual"
                         android:singleLine="true"
                         android:text="Mishka"
                         android:textColor="@android:color/black"
@@ -80,6 +82,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="2"
+                        android:fontFamily="casual"
                         android:gravity="center"
                         android:text="test"
                         android:textColor="@android:color/black" />
@@ -91,6 +94,7 @@
                         android:layout_gravity="start"
                         android:layout_weight="1"
                         android:ellipsize="end"
+                        android:fontFamily="casual"
                         android:gravity="start"
                         android:singleLine="true"
                         android:text="TextView"
