--- a/app/src/main/res/layout/multiplayer_end_of_game.xml
+++ b/app/src/main/res/layout/multiplayer_end_of_game.xml
@@ -27,6 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:fontFamily="casual"
                 android:gravity="center_horizontal"
                 android:text="@string/win"
                 android:textColor="@android:color/holo_green_light"
@@ -37,6 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:fontFamily="casual"
                 android:gravity="center_horizontal"
                 android:text="@string/lose"
                 android:textColor="@android:color/holo_green_light"
@@ -53,6 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:fontFamily="casual"
                 android:gravity="center_horizontal"
                 android:text="@string/win"
                 android:textColor="@android:color/holo_green_light"
@@ -63,6 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:fontFamily="casual"
                 android:gravity="center_horizontal"
                 android:text="@string/lose"
                 android:textColor="@android:color/holo_green_light"
@@ -79,6 +83,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:fontFamily="casual"
                 android:gravity="center_horizontal"
                 android:text="@string/step"
                 android:textColor="@color/textColor"
@@ -89,6 +94,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:fontFamily="casual"
                 android:gravity="center_horizontal"
                 android:text="@string/step"
                 android:textColor="@color/textColor"
@@ -105,6 +111,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:fontFamily="casual"
                 android:gravity="center_horizontal"
                 android:text="@string/time"
                 android:textColor="@color/textColor"
@@ -115,6 +122,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:fontFamily="casual"
                 android:gravity="center_horizontal"
                 android:text="@string/time"
                 android:textColor="@color/textColor"
@@ -131,6 +139,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:fontFamily="casual"
                 android:gravity="center_horizontal"
                 android:text="@string/score"
                 android:textColor="@color/textColor"
@@ -141,6 +150,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:fontFamily="casual"
                 android:gravity="center_horizontal"
                 android:text="@string/score"
                 android:textColor="@color/textColor"
