--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -11,14 +11,14 @@
         android:id="@+id/cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorBackground"
-        >
+        android:background="@color/colorBackground">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/colorBackground"
             android:orientation="horizontal"
-            android:padding="16dp">
+            android:padding="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -35,7 +35,7 @@
                     android:fontFamily="casual"
                     android:gravity="center"
                     android:text="999"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/textColor"
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -67,7 +67,7 @@
                         android:fontFamily="casual"
                         android:singleLine="true"
                         android:text="Mishka"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/textColor"
                         android:textSize="26sp" />
 
                 </LinearLayout>
@@ -85,7 +85,7 @@
                         android:fontFamily="casual"
                         android:gravity="center"
                         android:text="test"
-                        android:textColor="@android:color/black" />
+                        android:textColor="@color/textColor" />
 
                     <TextView
                         android:id="@+id/date"
@@ -98,7 +98,7 @@
                         android:gravity="start"
                         android:singleLine="true"
                         android:text="TextView"
-                        android:textColor="@android:color/black" />
+                        android:textColor="@color/textColor" />
 
                 </LinearLayout>
             </LinearLayout>
