--- a/app/src/main/res/layout/cspinner_row.xml
+++ b/app/src/main/res/layout/cspinner_row.xml
@@ -2,8 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="start"
+    android:background="@color/colorBackground"
+    android:elevation="0dp"
     android:gravity="start"
     android:orientation="horizontal">
 
@@ -30,14 +32,16 @@
     <TextView
         android:id="@+id/tvName"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="start"
         android:layout_toEndOf="@+id/ivFlag"
         android:layout_toRightOf="@+id/ivFlag"
         android:layout_weight="1"
+        android:fontFamily="casual"
+        android:gravity="center"
         android:padding="5dp"
         android:text="TextView"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/textColor"
         android:textSize="14sp"
-        android:textStyle="italic" />
+        android:textStyle="bold|italic" />
 </LinearLayout>
