--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -28,7 +28,7 @@
             android:layout_marginBottom="10dp"
             android:background="@drawable/rounded_button"
             android:elevation="4dp"
-            android:fontFamily="casual"
+            android:fontFamily="@font/all_text"
             android:text="@string/play"
             android:textStyle="bold" />
 
@@ -46,7 +46,7 @@
                 android:layout_row="0"
                 android:layout_weight="1"
                 android:checked="false"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:text="@string/xsmall" />
 
             <TextView
@@ -55,6 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:fontFamily="@font/all_text"
                 android:gravity="center" />
 
             <RadioButton
@@ -65,7 +66,7 @@
                 android:layout_gravity="left"
                 android:layout_row="0"
                 android:layout_weight="1"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:text="@string/small" />
 
             <TextView
@@ -74,6 +75,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:fontFamily="@font/all_text"
                 android:gravity="center" />
 
             <RadioButton
@@ -85,7 +87,7 @@
                 android:layout_row="1"
                 android:layout_weight="1"
                 android:checked="false"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:text="@string/medium" />
 
             <TextView
@@ -94,6 +96,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:fontFamily="@font/all_text"
                 android:gravity="center" />
         </LinearLayout>
 
@@ -110,7 +113,7 @@
                 android:layout_gravity="left"
                 android:layout_row="1"
                 android:layout_weight="1"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:text="@string/large" />
 
             <TextView
@@ -119,6 +122,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:fontFamily="@font/all_text"
                 android:gravity="center" />
 
             <RadioButton
@@ -129,7 +133,7 @@
                 android:layout_gravity="left"
                 android:layout_row="2"
                 android:layout_weight="1"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:text="@string/xlarge" />
 
             <TextView
@@ -138,6 +142,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:fontFamily="@font/all_text"
                 android:gravity="center" />
 
             <RadioButton
@@ -149,9 +154,9 @@
                 android:layout_row="2"
                 android:layout_weight="1"
                 android:checked="true"
+                android:fontFamily="@font/all_text"
                 android:text="@string/xxlarge"
-                android:textSize="10sp"
-                android:fontFamily="casual" />
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/xxlargeAvailableUsers"
@@ -159,6 +164,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:fontFamily="@font/all_text"
                 android:gravity="center" />
         </LinearLayout>
 
@@ -176,7 +182,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/rounded_button"
                 android:elevation="4dp"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:text="@string/multiplayer"
                 android:textStyle="bold" />
 
@@ -196,7 +202,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/rounded_button"
                     android:elevation="4dp"
-                    android:fontFamily="casual"
+                    android:fontFamily="@font/all_text"
                     android:text="@string/botplay"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -219,7 +225,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/rounded_button"
                     android:elevation="4dp"
-                    android:fontFamily="casual"
+                    android:fontFamily="@font/all_text"
                     android:text="@string/statistic"
                     android:textStyle="bold" />
 
@@ -231,7 +237,7 @@
                     android:layout_marginStart="2dp"
                     android:layout_weight="1"
                     android:background="@drawable/rounded_button"
-                    android:fontFamily="casual"
+                    android:fontFamily="@font/all_text"
                     android:text="@string/topMultiplayer"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -245,7 +251,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/rounded_button"
                 android:elevation="4dp"
-                android:fontFamily="casual"
+                android:fontFamily="@font/bad_script_regular"
                 android:text="@string/stopAds"
                 android:textStyle="bold" />
 
@@ -258,7 +264,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/rounded_button"
                 android:elevation="4dp"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:text="@string/userInfo"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -284,7 +290,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:text="@string/online"
                 android:textColor="@color/textColor"
                 android:textSize="18sp" />
@@ -299,7 +305,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:textColor="@color/textColor"
                 android:textSize="18sp" />
 
