--- a/app/src/main/res/layout/activity_wait_user.xml
+++ b/app/src/main/res/layout/activity_wait_user.xml
@@ -57,7 +57,7 @@
                     android:layout_gravity="center"
                     android:layout_weight="0"
                     android:ellipsize="middle"
-                    android:fontFamily="casual"
+                    android:fontFamily="@font/all_text"
                     android:gravity="center"
                     android:singleLine="true"
                     android:textColor="@android:color/white"
@@ -83,7 +83,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:fontFamily="casual"
+                    android:fontFamily="@font/all_text"
                     android:gravity="center"
                     android:text="@string/versus"
                     android:textColor="@android:color/white"
@@ -102,7 +102,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ellipsize="marquee"
-                    android:fontFamily="casual"
+                    android:fontFamily="@font/all_text"
                     android:gravity="center"
                     android:singleLine="true"
                     android:textColor="@android:color/white" />
