--- a/app/src/main/res/layout/bot_level_list.xml
+++ b/app/src/main/res/layout/bot_level_list.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:fontFamily="casual"
+            android:fontFamily="@font/all_text"
             android:padding="10dp"
             android:text="@string/easy"
             android:thumbTint="@color/colorButton" />
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:fontFamily="casual"
+            android:fontFamily="@font/all_text"
             android:padding="10dp"
             android:text="@string/normal"
             android:thumbTint="@color/colorButton" />
@@ -48,7 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:fontFamily="casual"
+            android:fontFamily="@font/all_text"
             android:padding="10dp"
             android:text="@string/hard"
             android:thumbTint="@color/colorButton" />
@@ -58,7 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:fontFamily="casual"
+            android:fontFamily="@font/all_text"
             android:padding="10dp"
             android:text="@string/veryhard"
             android:thumbTint="@color/colorButton" />
