--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -32,7 +32,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
-                    android:fontFamily="casual"
+                    android:fontFamily="@font/all_text"
                     android:gravity="center"
                     android:text="999"
                     android:textColor="@color/textColor"
@@ -64,7 +64,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:ellipsize="end"
-                        android:fontFamily="casual"
+                        android:fontFamily="@font/all_text"
                         android:singleLine="true"
                         android:text="Mishka"
                         android:textColor="@color/textColor"
@@ -82,7 +82,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="2"
-                        android:fontFamily="casual"
+                        android:fontFamily="@font/all_text"
                         android:gravity="center"
                         android:text="test"
                         android:textColor="@color/textColor" />
@@ -94,7 +94,7 @@
                         android:layout_gravity="start"
                         android:layout_weight="1"
                         android:ellipsize="end"
-                        android:fontFamily="casual"
+                        android:fontFamily="@font/all_text"
                         android:gravity="start"
                         android:singleLine="true"
                         android:text="TextView"
