--- a/app/src/main/res/layout/multiplayer_end_of_game.xml
+++ b/app/src/main/res/layout/multiplayer_end_of_game.xml
@@ -28,7 +28,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ellipsize="middle"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:gravity="center_horizontal"
                 android:singleLine="true"
                 android:text="@string/win"
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ellipsize="middle"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:gravity="center_horizontal"
                 android:singleLine="true"
                 android:text="@string/lose"
@@ -59,7 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:gravity="center_horizontal"
                 android:text="@string/win"
                 android:textColor="@android:color/holo_green_light"
@@ -70,7 +70,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:gravity="center_horizontal"
                 android:text="@string/lose"
                 android:textColor="@android:color/holo_green_light"
@@ -87,7 +87,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:gravity="center_horizontal"
                 android:text="@string/step"
                 android:textColor="@color/textColor"
@@ -98,7 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:gravity="center_horizontal"
                 android:text="@string/step"
                 android:textColor="@color/textColor"
@@ -115,8 +115,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:gravity="center_horizontal"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+                android:singleLine="true"
                 android:text="@string/time"
                 android:textColor="@color/textColor"
                 android:textSize="24sp" />
@@ -126,8 +129,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:gravity="center_horizontal"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+                android:singleLine="true"
                 android:text="@string/time"
                 android:textColor="@color/textColor"
                 android:textSize="24sp" />
@@ -143,7 +149,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:gravity="center_horizontal"
                 android:text="@string/score"
                 android:textColor="@color/textColor"
@@ -154,7 +160,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:gravity="center_horizontal"
                 android:text="@string/score"
                 android:textColor="@color/textColor"
