--- a/app/src/main/res/layout/singleplayer_end_of_game.xml
+++ b/app/src/main/res/layout/singleplayer_end_of_game.xml
@@ -9,7 +9,7 @@
         android:id="@+id/message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="casual"
+        android:fontFamily="@font/all_text"
         android:gravity="center_horizontal"
         android:text="@string/congratulations"
         android:textColor="@android:color/holo_green_light"
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:fontFamily="casual"
+        android:fontFamily="@font/all_text"
         android:gravity="center_horizontal"
         android:text="@string/step"
         android:textColor="@color/textColor"
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:fontFamily="casual"
+        android:fontFamily="@font/all_text"
         android:gravity="center_horizontal"
         android:text="@string/score"
         android:textColor="@color/textColor"
@@ -42,7 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:fontFamily="casual"
+        android:fontFamily="@font/all_text"
         android:gravity="center_horizontal"
         android:text="@string/time"
         android:textColor="@color/textColor"
