--- a/app/src/main/res/layout/activity_battlefield.xml
+++ b/app/src/main/res/layout/activity_battlefield.xml
@@ -87,7 +87,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_weight="1"
-            android:fontFamily="casual"
+            android:fontFamily="@font/all_text"
             android:gravity="center"
             android:hint="@string/user_country"
             android:textColorHint="@android:color/white"
@@ -107,7 +107,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ellipsize="end"
-            android:fontFamily="casual"
+            android:fontFamily="@font/all_text"
             android:gravity="center"
             android:singleLine="true"
             android:textColor="@android:color/white"
@@ -119,7 +119,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ellipsize="end"
-            android:fontFamily="casual"
+            android:fontFamily="@font/all_text"
             android:gravity="center"
             android:paddingEnd="1dp"
             android:paddingStart="1dp"
@@ -153,25 +153,25 @@
 
                     <TextView
                         android:id="@+id/score"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="false"
                         android:layout_centerVertical="false"
                         android:layout_weight="1"
-                        android:fontFamily="casual"
+                        android:fontFamily="@font/all_text"
                         android:text="@string/score"
                         android:textColor="@android:color/white"
                         android:textSize="18sp" />
 
                     <TextView
                         android:id="@+id/currentScore"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignBaseline="@+id/score"
                         android:layout_alignBottom="@+id/score"
                         android:layout_toEndOf="@+id/score"
                         android:layout_weight="1"
-                        android:fontFamily="casual"
+                        android:fontFamily="@font/all_text"
                         android:textColor="@android:color/white"
                         android:textSize="18sp" />
                 </TableRow>
@@ -182,13 +182,13 @@
 
                     <TextView
                         android:id="@+id/step"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignBaseline="@+id/currentStepCount"
                         android:layout_alignBottom="@+id/currentStepCount"
                         android:layout_toStartOf="@+id/currentStepCount"
                         android:layout_weight="1"
-                        android:fontFamily="casual"
+                        android:fontFamily="@font/all_text"
                         android:gravity="left"
                         android:text="@string/step"
                         android:textColor="@android:color/white"
@@ -196,13 +196,13 @@
 
                     <TextView
                         android:id="@+id/currentStepCount"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignBaseline="@+id/currentScore"
                         android:layout_alignBottom="@+id/currentScore"
                         android:layout_alignParentEnd="true"
                         android:layout_weight="1"
-                        android:fontFamily="casual"
+                        android:fontFamily="@font/all_text"
                         android:textColor="@android:color/white"
                         android:textSize="18sp" />
 
@@ -214,25 +214,25 @@
 
                     <TextView
                         android:id="@+id/timeText"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/currentScore"
                         android:layout_toEndOf="@+id/currentScore"
                         android:layout_weight="1"
-                        android:fontFamily="casual"
+                        android:fontFamily="@font/all_text"
                         android:text="@string/time"
                         android:textColor="@android:color/white"
                         android:textSize="18sp" />
 
                     <TextView
                         android:id="@+id/timeValue"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/step"
                         android:layout_gravity="start"
                         android:layout_toStartOf="@+id/step"
                         android:layout_weight="1"
-                        android:fontFamily="casual"
+                        android:fontFamily="@font/all_text"
                         android:gravity="start"
                         android:text="0:00"
                         android:textColor="@android:color/white"
@@ -256,7 +256,7 @@
                         android:layout_alignParentStart="false"
                         android:layout_centerVertical="false"
                         android:layout_weight="1"
-                        android:fontFamily="casual"
+                        android:fontFamily="@font/all_text"
                         android:text="@string/score"
                         android:textColor="@android:color/white"
                         android:textSize="18sp" />
@@ -269,7 +269,7 @@
                         android:layout_alignBottom="@+id/scoreSecondPlayer"
                         android:layout_toEndOf="@+id/scoreSecondPlayer"
                         android:layout_weight="1"
-                        android:fontFamily="casual"
+                        android:fontFamily="@font/all_text"
                         android:textColor="@android:color/white"
                         android:textSize="18sp" />
                 </TableRow>
@@ -286,7 +286,7 @@
                         android:layout_alignBottom="@+id/currentStepCountSecondPlayer"
                         android:layout_toStartOf="@+id/currentStepCountSecondPlayer"
                         android:layout_weight="1"
-                        android:fontFamily="casual"
+                        android:fontFamily="@font/all_text"
                         android:gravity="left"
                         android:text="@string/step"
                         android:textColor="@android:color/white"
@@ -300,7 +300,7 @@
                         android:layout_alignBottom="@+id/currentScoreSecondPlayer"
                         android:layout_alignParentEnd="true"
                         android:layout_weight="1"
-                        android:fontFamily="casual"
+                        android:fontFamily="@font/all_text"
                         android:textColor="@android:color/white"
                         android:textSize="18sp" />
 
