--- a/app/src/main/res/layout/content_end_of_game.xml
+++ b/app/src/main/res/layout/content_end_of_game.xml
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:fontFamily="casual"
+            android:fontFamily="@font/all_text"
             android:gravity="center_horizontal|center"
             android:text="Facts"
             android:textColor="@color/textColor"
