--- a/app/src/main/res/layout/content_user_info.xml
+++ b/app/src/main/res/layout/content_user_info.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:singleLine="true"
                 android:text="@string/playername"
                 android:textColor="@color/textColor"
@@ -37,8 +37,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="casual"
-                android:inputType="textPersonName" />
+                android:fontFamily="@font/all_text"
+                android:inputType="textPersonName"
+                android:textColor="@color/textColor" />
 
         </LinearLayout>
 
@@ -52,7 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:fontFamily="casual"
+                android:fontFamily="@font/all_text"
                 android:text="@string/user_country"
                 android:textColor="@color/textColor"
                 android:textSize="18sp" />
