--- a/app/src/main/res/layout/cspinner_row.xml
+++ b/app/src/main/res/layout/cspinner_row.xml
@@ -37,7 +37,7 @@
         android:layout_toEndOf="@+id/ivFlag"
         android:layout_toRightOf="@+id/ivFlag"
         android:layout_weight="1"
-        android:fontFamily="casual"
+        android:fontFamily="@font/all_text"
         android:gravity="center"
         android:padding="5dp"
         android:text="TextView"
